# openline-agents

./: CHANGELOG.md  README.md  RELEASE_NOTES.md  SPEC.md  pyproject.toml  verify-node.mjs
.github/workflows/: conformance.yml
docs/: BUILD_OPENLINE_CONNECTORS_ISSUE.md  README_BUILDER_BANNER.md
examples/: shadow_loop.py  simple-handoff.receipt.json
schemas/: calibration-profile-receipt.schema.json  controller-proposal-receipt.schema.json  outcome-receipt.schema.json
scripts/: generate_vectors.py
src/openline_agents/: __init__.py  calibration.py  capture.py  controller.py  events.py  loop.py  outcome.py
tests/: helpers.py  test_calibration.py  test_capture.py  test_loop.py  test_outcome.py  test_real_sdk_integration.py
vectors/: calibration-profile-receipt.json  controller-proposal-receipt.json  input-receipt.json  invalid-tampered-controller-proposal.json  outcome-receipt.json
